# clipit

./: .gitignore  LICENSE  README.md  dev.py  main.py  makefile  pyproject.toml  research.ipynb  scene.py  whisper.py  whisperv2.py
src/: preprocess.py  prompts.py
