[project]
name = "clipit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai-whisper>=20240930",
    "torch>=2.5.1",
    "transformers>=4.48.0",
    "whisper-timestamped>=1.15.8",
    "python-dotenv>=1.0.1",
    "openai>=1.59.8",
    "modal>=0.72.31",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "ruff>=0.9.2",
]
