[project]
name = "clipit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "openai>=1.59.8",
    "modal>=0.72.31",
    "manim>=0.19.0",
    "ipykernel>=6.29.5",
]

[tool.uv]
dev-dependencies = ["jupyter>=1.1.1", "ruff>=0.9.2"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F405", "F403", "E501"]
